syntax = "proto3";

option java_multiple_files = true;
option java_package = "raf.hotelreservation.grpc";

service ReservationService {
  rpc reserveHotel(ReservationRequest) returns (Reservation);
}

message ReservationRequest {
  string clientID = 1;
  string hotelID = 2;
  int64 startDate = 3;
  int32 numDays = 4;

}

message Reservation {
  string hotelID = 1;
  int64 startDate = 2;
  int32 numDays = 3;
  int64 dateToPay = 4;
}